--- a/slidesUB/methodes.tex
+++ b/slidesUB/methodes.tex
@@ -1,4 +1,19 @@
+\subsection{Approche suivie}
+\begin{frame}{Approche suivie}
+	\begin{itemize}
+		\itemar Introduire la notion de répartition par des modifications du réseau de Petri.
+		\itemar Élément atomique utilisé : \textit{segment}.
+	\end{itemize}
 
+	Trois méthodes proposées.
+	\begin{itemize}
+		\item Deux modifient la topologie du réseau de Petri.
+		\item Une modifie la sémantique du réseau de Petri.
+	\end{itemize}
+	
+	Une méthode par modification de la topologie a été retenue pour une étude plus poussée.
+\end{frame}
+\subsection{Première méthode}
 \begin{frame}
 	\begin{figure}[h!]
 		\centering
