--- a/slidesUB/presentation.tex
+++ b/slidesUB/presentation.tex
@@ -13,6 +13,7 @@
 	\begin{itemize}
 		\item Fonctionnement avec les concepts {OSSIA}.
 		\item Fonctionnement dans un cadre plus général que celui du logiciel, et sur plateformes embarquées.
+		\item Problématique de synchronisation.
 	\end{itemize}
 	
 \end{frame}
@@ -30,15 +31,10 @@
 	\end{itemize}
 	
 	Aspect majeur : \emph{interactivité}.
-		\begin{itemize}
-			\item[$\rightarrow$] Est implémenté avec le protocole \textsc{Minuit}, et le temps souple ou conditionnel.
-		\end{itemize}
+	\begin{itemize}
+		\item[$\rightarrow$] Est implémenté avec le protocole \textsc{Minuit}, et le temps souple ou conditionnel.
+	\end{itemize}
 		
 	La notion de processus relie temps et interactivité.
-\end{frame}
-
-\subsection{Buts du stage}
-\begin{frame}{Buts du stage}
-
 \end{frame}
 
