--- a/slidesUB/implementation.tex
+++ b/slidesUB/implementation.tex
@@ -3,6 +3,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{\scshape Implémentation}
+\subsection{Logiciel de test}
+\subsection{API OSSIA}
 
 \section{\scshape Résultats}
 \subsection{Frame 1}
