--- a/slidesUB/methodes.tex
+++ b/slidesUB/methodes.tex
@@ -14,20 +14,72 @@
 	Une méthode par modification de la topologie a été retenue pour une étude plus poussée.
 \end{frame}
 \subsection{Première méthode}
-\begin{frame}
+\begin{frame}{Première méthode}
 	\begin{figure}[h!]
 		\centering
 		\input{figures/deplacementMethode1}
-		\caption{Première méthode, avant déplacement}
+		\caption{vant déplacement}
 		\label{fig:deplacementMethode1}
 	\end{figure}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Première méthode}
 	\begin{figure}[h!]
 		\centering
 		\input{figures/deplacementMethode1suite}
-		\caption{Première méthode, après déplacement}
-		\label{fig:deplacementMethode12}
+		\caption{Après déplacement}
+		\label{fig:deplacementMethode1-2}
+	\end{figure}
+\end{frame}
+
+\subsection{Seconde méthode}
+\begin{frame}{Seconde méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacement2}
+		\caption{Avant déplacement}
+		\label{fig:deplacementMethode2}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Seconde méthode}
+	\begin{figure}[h!]
+		\centering
+		\resizebox{11cm}{!}{\input{figures/deplacement2suite}}
+		\caption{Après déplacement}
+		\label{fig:deplacementMethode2-2}
+	\end{figure}
+\end{frame}
+
+\subsection{Troisième méthode}
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementCol}
+		\label{fig:deplacementMethode3}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementColsuite}
+		\label{fig:deplacementMethode3-2}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementColsuite2}
+		\label{fig:deplacementMethode3-3}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementColsuite3}
+		\label{fig:deplacementMethode3-4}
 	\end{figure}
 \end{frame}
