--- a/slidesUB/header.tex
+++ b/slidesUB/header.tex
@@ -2,12 +2,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\scshape Introduction}
 \begin{frame}
-
 \titlepage
 \end{frame}
 
 \begin{frame}{Sommaire}
-\tableofcontents
+	\setlength{\columnsep}{2cm}
+	\setlength{\columnseprule}{1pt}
+	\begin{multicols}{2}
+		\tableofcontents
+	\end{multicols}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
