--- a/slidesUB/conclusion.tex
+++ b/slidesUB/conclusion.tex
@@ -1,11 +1,26 @@
 \section{\scshape Perspectives}
 \begin{frame}
-	lolol
+
 \end{frame}
 
 \section{\scshape Conclusion}
 \begin{frame}
 	. Continuation en thèse -> intégration des notions spatio-temporelles.
 	
+	. Collaboration via internet.
+	
+	. Étude poussée des autres méthodes.
+	
+	. Plus de résultats.
+	
 	
 \end{frame}
+
+{\small
+\begin{frame}[allowframebreaks]{References}
+	
+	\bibliographystyle{amsalpha}
+	\bibliography{../src/stagepetri.bib}
+	
+\end{frame}
+}
