--- a/slidesUB/implementation.tex
+++ b/slidesUB/implementation.tex
@@ -3,11 +3,34 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{\scshape Implémentation}
-\subsection{Logiciel de test}
-\subsection{API OSSIA}
+\begin{frame}{Implémentation}
+	Plusieurs aspects : 
+	
+	\begin{itemize}
+		\itemar Implémentation des algorithmes sur réseaux de Petri.
+		\itemar Tests.
+		\itemar Implémentation dans le logiciel i-score.
+		\itemar Portage sur plate-formes embarquées.
+	\end{itemize}
+	
+	L'implémentation dans le logiciel doit offrir des concepts simples aux compositeurs (abstraction de la technique).
+	
+	\begin{itemize}
+		\itemar Création de concepts de haut-niveau travaillant avec l'\textsc{API Score} : Groupes, Clients, Permissions.
+	\end{itemize}
+\end{frame}
 
-\section{\scshape Résultats}
-\subsection{Frame 1}
-\begin{frame}{Frame 1}
+\subsection{Logiciel de test}
+\begin{frame}{Logiciel de test}
+	
+\end{frame}
+
+\subsection{API OSSIA}
+\begin{frame}{Implémentation dans l'API OSSIA}
+\end{frame}
+
+\subsection{Résultats}
+\begin{frame}{Résultats}
 
 \end{frame}
+
