--- a/slidesUB/presentation.tex
+++ b/slidesUB/presentation.tex
@@ -27,7 +27,7 @@
 	\vspace{1em}
 	Aspect majeur : \emph{temps}.
 	\begin{itemize}
-		\item[$\rightarrow$] Est implémenté avec la notion de scénario.
+		\item[$\rightarrow$] Est implémenté avec la notion de scénario et d'évènement.
 	\end{itemize}
 	
 	Aspect majeur : \emph{interactivité}.
@@ -35,6 +35,6 @@
 		\item[$\rightarrow$] Est implémenté avec le protocole \textsc{Minuit}, et le temps souple ou conditionnel.
 	\end{itemize}
 		
-	La notion de processus relie temps et interactivité.
+	La notion de processus relie temps et interactivité. Ces relations précisées dans \cite{hogue2014ossia}.
 \end{frame}
 
