--- a/slidesUB/methodes.tex
+++ b/slidesUB/methodes.tex
@@ -4,7 +4,7 @@
 		\itemar Introduire la notion de répartition par des modifications du réseau de Petri.
 		\itemar Élément atomique utilisé : \textit{segment}.
 	\end{itemize}
-
+	\vspace{1em}
 	Trois méthodes proposées.
 	\begin{itemize}
 		\item Deux modifient la topologie du réseau de Petri.
@@ -18,7 +18,7 @@
 	\begin{figure}[h!]
 		\centering
 		\input{figures/deplacementMethode1}
-		\caption{vant déplacement}
+		\caption{Avant déplacement}
 		\label{fig:deplacementMethode1}
 	\end{figure}
 \end{frame}
@@ -56,6 +56,7 @@
 	\begin{figure}[h!]
 		\centering
 		\input{figures/deplacementCol}
+		\caption{Avant déplacement}
 		\label{fig:deplacementMethode3}
 	\end{figure}
 \end{frame}
@@ -64,6 +65,7 @@
 	\begin{figure}[h!]
 		\centering
 		\input{figures/deplacementColsuite}
+		\caption{Après déplacement}
 		\label{fig:deplacementMethode3-2}
 	\end{figure}
 \end{frame}
@@ -72,6 +74,7 @@
 	\begin{figure}[h!]
 		\centering
 		\input{figures/deplacementColsuite2}
+		\caption{Exécution}
 		\label{fig:deplacementMethode3-3}
 	\end{figure}
 \end{frame}
@@ -80,6 +83,29 @@
 	\begin{figure}[h!]
 		\centering
 		\input{figures/deplacementColsuite3}
+		\caption{Exécution (suite)}
 		\label{fig:deplacementMethode3-4}
 	\end{figure}
+\end{frame}
+
+\begin{frame}
+	Deuxième méthode retenue.
+	
+	\begin{itemize}
+		\item[\textbullet] Améliorations proposées : 
+			\begin{itemize}
+				\item Utilisation pour backup.
+				\item Fonctionnement en mode «~canon~».
+				\item Rétro-propagation si délai trop important.
+				\item Simplifications de l'algorithme dans les cas courants.
+			\end{itemize}
+		\vspace{1em}
+		\item[\textbullet] Différents modes de synchronisation : 
+			\begin{itemize}
+				\item Attente.
+				\item Duplication.
+				\item Un seul.
+			\end{itemize}
+	\end{itemize}
+	
 \end{frame}
