--- a/slidesUB/conclusion.tex
+++ b/slidesUB/conclusion.tex
@@ -1,20 +1,28 @@
-\section{\scshape Perspectives}
-\begin{frame}
-
-\end{frame}
 
 \section{\scshape Conclusion}
-\begin{frame}
-	. Continuation en thèse -> intégration des notions spatio-temporelles.
+\subsection*{Bilan}
+\begin{frame}{Bilan}
+	. Méthode de répartition manuelle sur réseaux de Petri proposée et testée.
 	
-	. Collaboration via internet.
+	. Pas d'équivalent trouvé dans la littérature.
 	
-	. Étude poussée des autres méthodes.
+	. Implémentation en cours dans logiciel.
 	
-	. Plus de résultats.
-	
+	. Conception d'un scénario de test faisant appel aux notions de répartition présentées.
 	
 \end{frame}
+
+\subsection*{Perspectives}
+\begin{frame}{Perspectives}
+	. Continuation en thèse -> intégration des notions spatio-temporelles.
+		
+	. Collaboration via internet.
+		
+	. Étude poussée des autres méthodes.
+		
+	. Plus de résultats.
+\end{frame}
+
 
 {\small
 \begin{frame}[allowframebreaks]{References}
