--- a/slidesUB/header.tex
+++ b/slidesUB/header.tex
@@ -1,10 +1,10 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\scshape Introduction}
+\subsection*{Introduction}
 \begin{frame}
 \titlepage
 \end{frame}
 
+\subsection*{Sommaire}
 \begin{frame}{Sommaire}
 	\setlength{\columnsep}{2cm}
 	\setlength{\columnseprule}{1pt}
@@ -12,6 +12,3 @@
 		\tableofcontents
 	\end{multicols}
 \end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
