--- a/slidesUB/implementation.tex
+++ b/slidesUB/implementation.tex
@@ -1,7 +1,3 @@
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \section{\scshape Implémentation}
 \begin{frame}{Implémentation}
 	Plusieurs aspects : 
@@ -22,11 +18,18 @@
 
 \subsection{Logiciel de test}
 \begin{frame}{Logiciel de test}
+	\begin{itemize}
+		\itemar Simulation de l'exécution d'un réseau de Petri quelconque sur plusieurs machines.
+		\itemar Répartition à la volée.
+		\itemar Communication par messages \textsc{OSC}.
+		\itemar Sert de chantier d'expérimentation pour les choix effectués par la suite.
+	\end{itemize}
 	
 \end{frame}
 
 \subsection{API OSSIA}
 \begin{frame}{Implémentation dans l'API OSSIA}
+	Permet l'utilisation pour la dernière version d'i-score.
 \end{frame}
 
 \subsection{Résultats}
