--- a/slidesUB/main.tex
+++ b/slidesUB/main.tex
@@ -1,10 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  This Beamer template was created by Cameron Bracken.
-%%  Anyone can freely use or modify it for any purpose
-%%  without attribution.
-%%
-%%  Last Modified: January 9, 2009
-%%
 \RequirePackage[l2tabu, orthodox]{nag}
 \documentclass[xcolor=x11names,compress]{beamer}
 
@@ -105,7 +98,7 @@
 
 \setbeamertemplate{itemize items}{--}
 \newcommand{\itemar}{\item[$\rightarrow$]}
-
+\renewcommand{\bibsection}{\subsubsection*{\bibname } }
 \begin{document}
 \input{header}
 \input{presentation}
