--- a/slidesUB/methodes.tex
+++ b/slidesUB/methodes.tex
@@ -102,10 +102,9 @@
 		\vspace{1em}
 		\item[\textbullet] Différents modes de synchronisation : 
 			\begin{itemize}
-				\item Attente.
-				\item Duplication.
-				\item Un seul.
+				\item Attente de tous.
+				\item Duplication de chaque jeton.
+				\item Un seul continue.
 			\end{itemize}
 	\end{itemize}
-	
 \end{frame}
