--- a/slidesUB/conclusion.tex
+++ b/slidesUB/conclusion.tex
@@ -1,26 +1,28 @@
-
 \section{\scshape Conclusion}
 \subsection*{Bilan}
 \begin{frame}{Bilan}
-	. Méthode de répartition manuelle sur réseaux de Petri proposée et testée.
+	\begin{itemize}
+	\item Méthode de répartition manuelle sur réseaux de Petri proposée et testée.
 	
-	. Pas d'équivalent trouvé dans la littérature.
+	\item Pas d'équivalent trouvé dans la littérature.
 	
-	. Implémentation en cours dans logiciel.
+	\item Implémentation en cours dans logiciel.
 	
-	. Conception d'un scénario de test faisant appel aux notions de répartition présentées.
-	
+	\item Conception d'un scénario de test faisant appel aux notions de répartition présentées.		
+	\end{itemize}
 \end{frame}
 
 \subsection*{Perspectives}
 \begin{frame}{Perspectives}
-	. Continuation en thèse -> intégration des notions spatio-temporelles.
-		
-	. Collaboration via internet.
-		
-	. Étude poussée des autres méthodes.
-		
-	. Plus de résultats.
+	\begin{itemize}
+		\item Continuation en embauche puis en thèse avec notamment l'intégration des notions spatio-temporelles.
+			
+		\item Collaboration via internet.
+			
+		\item Étude poussée des autres méthodes.
+			
+		\item Nécessité d'obtention de plus de résultats.
+	\end{itemize}
 \end{frame}
 
 
