--- a/slidesUB/existant.tex
+++ b/slidesUB/existant.tex
@@ -22,16 +22,16 @@ Multiples possibilités se chevauchant :
 	~ \\
 	Deux aspects à la répartition désirée : 
 	\begin{itemize}
-		\item Déplacement.
-		\item Duplication. 
+		\item Déplacement de scénarios.
+		\item Duplication de scénarios. 
 	\end{itemize}
 	~ \\
-	Nécessaire : estimation de latence.
+	Nécessaire : estimation de latence pour les faire partir au bon moment.
 	\begin{itemize}
-		\item Méthodes naïves, P2P\cite{im2000method}, King\cite{gummadi2002king}.
+		\itemar Méthodes par ping, P2P\cite{im2000method}, King\cite{gummadi2002king}.
 	\end{itemize}
 	
-	Utile : synchronisation en temps des machines.
+	Peut simplifier : synchronisation en temps des machines.
 	\begin{itemize}
 		\itemar{Protocoles \textsc{PTP}\cite{scheiterer2009synchronization}, \textsc{NTP}\cite{mills1991internet}}
 	\end{itemize}
