--- a/slidesUB/methodes.tex
+++ b/slidesUB/methodes.tex
@@ -13,6 +13,8 @@
 	
 	Une méthode par modification de la topologie a été retenue pour une étude plus poussée.
 \end{frame}
+
+\section{Présentation des méthodes}
 \subsection{Première méthode}
 \begin{frame}{Première méthode}
 	\begin{figure}[h!]
