--- a/slidesUB/presentation.tex
+++ b/slidesUB/presentation.tex
@@ -10,8 +10,9 @@
 	\vspace{1em}
 	Aspects apparus par la suite : 
 	\begin{itemize}
+		\item Édition collaborative.
 		\item Fonctionnement avec les concepts {OSSIA}.
-		\item Fonctionnement dans un cadre plus général que celui du logiciel, et sur plateformes embarquées.
+		\item Fonctionnement dans un cadre plus général que celui du logiciel, et sur plate-formes embarquées.
 		\item Problématique de synchronisation.
 	\end{itemize}
 	
@@ -26,14 +27,15 @@
 	\vspace{1em}
 	Aspect majeur : \emph{temps}.
 	\begin{itemize}
-		\item[$\rightarrow$] Est implémenté avec la notion de scénario et d'évènement.
+		\itemar Est implémenté avec la notion de scénario et d'évènement.
+		\itemar Interactivité du temps : temps souple, conditionnel\dots
 	\end{itemize}
 	
-	Aspect majeur : \emph{interactivité}.
+	Aspect majeur : \emph{inter-opérabilité}.
 	\begin{itemize}
-		\item[$\rightarrow$] Est implémenté avec le protocole \textsc{Minuit}, et le temps souple ou conditionnel.
+		\itemar Est implémenté avec le protocole \textsc{Minuit}.
 	\end{itemize}
 		
-	La notion de processus relie temps et interactivité. Ces relations précisées dans \cite{hogue2014ossia}.
+	La notion de processus relie temps et inter-opérabilité. Ces relations sont précisées dans \cite{hogue2014ossia}.
 \end{frame}
 
