--- a/slidesUB/conclusion.tex
+++ b/slidesUB/conclusion.tex
@@ -6,7 +6,7 @@
 	
 	\item Pas d'équivalent trouvé dans la littérature.
 	
-	\item Implémentation en cours dans logiciel.
+	\item Implémentation en cours dans le logiciel.
 	
 	\item Conception d'un scénario de test faisant appel aux notions de répartition présentées.		
 	\end{itemize}
@@ -15,9 +15,9 @@
 \subsection*{Perspectives}
 \begin{frame}{Perspectives}
 	\begin{itemize}
-		\item Continuation en embauche puis en thèse avec notamment l'intégration des notions spatio-temporelles.
+		\item Poursuite en \textsc{CDD} puis en thèse avec notamment l'intégration des notions spatio-temporelles.
 			
-		\item Collaboration via internet.
+		\item Collaboration via Internet.
 			
 		\item Étude poussée des autres méthodes.
 			
