--- a/slidesUB/methodes.tex
+++ b/slidesUB/methodes.tex
@@ -91,12 +91,12 @@
 \end{frame}
 
 \begin{frame}
-	Deuxième méthode retenue.
+	La seconde méthode est retenue.
 	
 	\begin{itemize}
 		\item[\textbullet] Améliorations proposées : 
 			\begin{itemize}
-				\item Utilisation pour backup.
+				\item Utilisation pour secours informatique (\textit{backup}).
 				\item Fonctionnement en mode «~canon~».
 				\item Rétro-propagation si délai trop important.
 				\item Simplifications de l'algorithme dans les cas courants.
