--- a/slidesUB/presentation.tex
+++ b/slidesUB/presentation.tex
@@ -1,5 +1,27 @@
+\subsection{OSSIA}
+\begin{frame}{OSSIA}
+	{\large Open Scenario System for Interactive Applications}
+	
+	Utilise les acquis de plusieurs années de développement au \textsc{LaBRI} et au \textsc{SCRIME}; basé sur le projet \textsc{ANR Virage}.
+	
+	\vspace{1em}
+	Aspect majeur : \emph{temps}.
+	\begin{itemize}
+		\itemar Est implémenté avec la notion de scénario et d'évènement.
+		\itemar Interactivité du temps : temps souple, conditionnel et points d'interaction.
+	\end{itemize}
+	
+	Aspect majeur : \emph{inter-opérabilité}.
+	\begin{itemize}
+		\itemar Est implémenté avec le protocole \textsc{Minuit}.
+	\end{itemize}
+	
+	La notion de processus relie temps et inter-opérabilité. Ces relations sont précisées dans \cite{hogue2014ossia}.
+\end{frame}
+
+
 \subsection{Sujet}
-\begin{frame}{Sujet du stage}
+\begin{frame}{Sujet du mémoire}
 	{\large Répartition des réseaux de Petri dans i-score}
 	
 	Aspects principaux : 
@@ -18,24 +40,4 @@
 	
 \end{frame}
 
-\subsection{OSSIA}
-\begin{frame}{OSSIA}
-	{\large Open Scenario System for Interactive Applications}
-	
-	Utilise les acquis de plusieurs années de développement au \textsc{LaBRI} et \textsc{SCRIME}; basé sur le projet \textsc{ANR Virage}.
-	
-	\vspace{1em}
-	Aspect majeur : \emph{temps}.
-	\begin{itemize}
-		\itemar Est implémenté avec la notion de scénario et d'évènement.
-		\itemar Interactivité du temps : temps souple, conditionnel\dots
-	\end{itemize}
-	
-	Aspect majeur : \emph{inter-opérabilité}.
-	\begin{itemize}
-		\itemar Est implémenté avec le protocole \textsc{Minuit}.
-	\end{itemize}
-		
-	La notion de processus relie temps et inter-opérabilité. Ces relations sont précisées dans \cite{hogue2014ossia}.
-\end{frame}
 
