--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -72,11 +72,11 @@
   publisher={Morgan Kaufmann}
 }
 
-@article{arias2014modelling,
+@inproceedings{arias2014modelling,
 	author = {Arias, Jaime and Desainte-Catherine, Myriam and Rueda, Camilo},
 	title = {Modelling Data Processing for Interactive Scores Using Coloured Petri Nets},
-	journal = { },
-	date = {submitted}
+	organization = {International Conference on	Application of Concurrency to System Design},
+	date = {2014}
 }
 
 @article{allen1983maintaining,
@@ -508,7 +508,14 @@ address = {Los Alamitos, CA, USA},
 @inproceedings{hogue2014ossia,
 	title={OSSIA : Open Scenario System for Interactive Applications},
 	author={De la Hogue, Théo and Baltazar, Pascal and Desainte-Catherine, Myriam and Chao, Jaime and Bossut, Clément},
-	organization={JIM},
+	organization={Journées de l'Informatique Musicale},
+	year={2014}
+}
+
+@inproceedings{arias2014executing,
+	title={Executing Hierarchical Interactive Scores in ReactiveML},
+	author={Arias, Jaime and Desainte-Catherine, Myriam and Salvati, Sylvain and Rueda, Camilo and de la Computaci{\'o}n, Ciencias},
+	organization={Journées de l'Informatique Musicale},
 	year={2014}
 }
 
