--- a/slidesUB/implementation.tex
+++ b/slidesUB/implementation.tex
@@ -9,10 +9,10 @@
 		\itemar Portage sur plate-formes embarquées.
 	\end{itemize}
 	
-	L'implémentation dans le logiciel doit offrir des concepts simples aux compositeurs (abstraction de la technique).
+	L'implémentation dans le logiciel doit offrir des abstractions simples pour les compositeurs.
 	
 	\begin{itemize}
-		\itemar Création de concepts de haut-niveau travaillant avec l'\textsc{API Score} : Session, Groupe, Client, Permission.
+		\itemar Création d'abstractions de haut-niveau travaillant avec l'\textsc{API Score} : Session, Groupe, Client, Permission.
 	\end{itemize}
 \end{frame}
 
@@ -49,14 +49,22 @@
 	Deux protocoles : 
 	
 	\begin{itemize}
-		\item Un en utilisant des machines virtuelles séparées par une latence quasiment fixe (avec \textsc{WANem}).
+		\item Un en utilisant des machines virtuelles séparées avec une latence quasiment fixe (avec \textsc{WANem}).
 		\item Un en utilisant des machines réelles connectées en Wi-Fi.
 	\end{itemize}
 	
-	Résultats obtenus :
-	\begin{itemize}
-		\item Cas VM : retard de 111 millisecondes sans algorithme, 47 millisecondes avec.
-		\item Cas réel : retard de 56 millisecondes sans algorithme, 4 millisecondes avec.
-	\end{itemize}
+	Résultats obtenus (retard après déplacement d'un segment, sans modification au réseau, puis avec application de la seconde méthode de déplacement présentée précédemment) :
+
+\begin{table}[H]
+	\centering
+	\tabulinesep=3pt
+	\begin{tabu} to \linewidth {XXX}
+		Protocole & Sans déplacement & Avec déplacement \\
+		\toprule[0.15em]
+		VM & $\num{111}\si{\milli\second}$ & $\num{47}\si{\milli\second}$ \\
+		Tablettes & $\num{56}\si{\milli\second}$ & $\num{4}\si{\milli\second}$ \\
+	\end{tabu}
+\end{table}
+
 \end{frame}
 
