--- a/slidesUB/conclusion.tex
+++ b/slidesUB/conclusion.tex
@@ -25,12 +25,48 @@
 	\end{itemize}
 \end{frame}
 
-
+\section*{\scshape Annexes}
 {\small
-\begin{frame}[allowframebreaks]{References}
-	
-	\bibliographystyle{amsalpha}
-	\bibliography{../src/stagepetri.bib}
-	
-\end{frame}
+	\begin{frame}[allowframebreaks]{Références}
+		
+		\bibliographystyle{amsalpha}
+		\bibliography{../src/stagepetri.bib}
+		
+	\end{frame}
 }
+\subsection{Troisième méthode}
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementCol}
+		\caption{Avant déplacement}
+		\label{fig:deplacementMethode3}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementColsuite}
+		\caption{Après déplacement}
+		\label{fig:deplacementMethode3-2}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementColsuite2}
+		\caption{Exécution}
+		\label{fig:deplacementMethode3-3}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Troisième méthode}
+	\begin{figure}[h!]
+		\centering
+		\input{figures/deplacementColsuite3}
+		\caption{Exécution (suite)}
+		\label{fig:deplacementMethode3-4}
+	\end{figure}
+\end{frame}
