--- a/slidesUB/existant.tex
+++ b/slidesUB/existant.tex
@@ -1,17 +1,17 @@
 \section{\scshape Théorisation}
 \subsection{Réseaux de Petri}
 \begin{frame}{Utilisation des réseaux de Petri}
-Utilisés comme moteur d'exécution : traduction des scénarios en réseaux de Petri\cite{allombert2009aspects}.
+	Multiples possibilités se chevauchant :
+	\begin{itemize}
+		\item Réseaux colorés.
+		\item Réseaux temporels et temporisés.
+		\item Réseaux spatio-temporels.
+		\item Réseaux hiérarchiques.
+	\end{itemize}
+	
+Dans le projet, utilisés comme moteur d'exécution : traduction des scénarios en réseaux de Petri\cite{allombert2009aspects}.
 
 Autres moteurs possibles : Reactive ML\cite{arias2014executing}, NTCC\cite{allombert2006concurrent}.
-
-Multiples possibilités se chevauchant :
-\begin{itemize}
-	\item Réseaux colorés.
-	\item Réseaux temporels et temporisés.
-	\item Réseaux spatio-temporels.
-	\item Réseaux hiérarchiques.
-\end{itemize}
 
 En parallèle : utilisation des réseaux de Petri pour transfert de flux de données~\cite{arias2014modelling}.
 \end{frame}
