--- a/slidesUB/implementation.tex
+++ b/slidesUB/implementation.tex
@@ -40,8 +40,14 @@
 		\item \textbf{Groupe} :  Associe des scénarios entre eux, et permet duplication et déplacement.
 		\item \textbf{Permission} :  
 		Permet des optimisations au niveau de l'envoi de messages entre clients.
-		
 	\end{itemize}
+\end{frame}
+
+\begin{frame}{Example réparti dans le formalisme OSSIA}
+	\begin{figure}
+		\centering
+		\includegraphics[scale=0.33]{../src/images/ossiaDistri.pdf}
+	\end{figure}
 \end{frame}
 
 \subsection{Résultats}
