--- a/slidesUB/presentation.tex
+++ b/slidesUB/presentation.tex
@@ -1,3 +1,4 @@
+\section{\scshape Introduction}
 \subsection{OSSIA}
 \begin{frame}{OSSIA}
 	{\large Open Scenario System for Interactive Applications}
@@ -19,6 +20,9 @@
 	La notion de processus relie temps et inter-opérabilité. Ces relations sont précisées dans \cite{hogue2014ossia}.
 \end{frame}
 
+\begin{frame}{Exemple de scénario}
+	\includegraphics[scale=0.5,clip,trim=0cm 28cm 0cm 13cm]{../src/images/moineOSSIA.pdf}
+\end{frame}
 
 \subsection{Sujet}
 \begin{frame}{Sujet du mémoire}
@@ -37,7 +41,4 @@
 		\item Fonctionnement dans un cadre plus général que celui du logiciel, et sur plate-formes embarquées.
 		\item Problématique de synchronisation.
 	\end{itemize}
-	
 \end{frame}
-
-
