--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -76,7 +76,7 @@
 	author = {Arias, Jaime and Desainte-Catherine, Myriam and Rueda, Camilo},
 	title = {Modelling Data Processing for Interactive Scores Using Coloured Petri Nets},
 	organization = {International Conference on	Application of Concurrency to System Design},
-	date = {2014}
+	year = {2014}
 }
 
 @article{allen1983maintaining,
