--- a/slidesUB/conclusion.tex
+++ b/slidesUB/conclusion.tex
@@ -34,7 +34,7 @@
 		
 	\end{frame}
 }
-\subsection{Troisième méthode}
+\subsection*{Troisième méthode}
 \begin{frame}{Troisième méthode}
 	\begin{figure}[h!]
 		\centering
