--- a/slidesUB/presentation.tex
+++ b/slidesUB/presentation.tex
@@ -40,5 +40,6 @@
 		\item Fonctionnement avec les concepts {OSSIA}.
 		\item Fonctionnement dans un cadre plus général que celui du logiciel, et sur plate-formes embarquées.
 		\item Problématique de synchronisation.
+		\item Augmentation des possibilités des compositeurs.
 	\end{itemize}
 \end{frame}
